dark mode fix

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,6 +12,7 @@ body {
 
 .darkModeToggle {
     position: fixed;
+    cursor: pointer;
     top: 15px;
     right: 15px;
     z-index: 1;
